    and make this information available to back-end Prolog compilers.

    Updated the Logtalk compilers in order to avoid generating unnecessary
    internal catchall clauses for the predicate declaration and definition
    tables for dynamic entities.

    Updated the Logtalk compiler in order to preclude using multifile
    predicates for breaking object encapsulation.

    When debugging messages specified in uses/2 directives, the message is now
    printed implicitly qualified as in the source code written by the user.

    Updated the SWI-Prolog config file in order to avoid preventing loading
    of a Logtalk source file when a Prolog file with the same name exists on
    the same lookup directory.

    Updated the SWI-Prolog integration files in order to hide the source code
    of the Logtalk (::)/2 and (<<)/2 built-in predicates from this compiler
    debugging tools.

    Updated the SWI-Prolog hooks file in order to support tracing Logtalk
    source code using the SWI-Prolog graphical debugger.

    Updated the ECLiPSe config file, simplifying some of the file handling
    predicates.

    Updated the "os" example with bug fixes and improvements for ECLiPSe
    contributed by Joachim Schimpf.

    Correct a bug in some shell scripts where "#/bin/bash" was used instead
    of "#!/bin/bash". Thanks to Yiorgos Adamopoulos for the bug report.


2.42.4 - April 4, 2011

    Added an entity_prefix/2 predicate and two sets of utility predicates,
    decompile_predicate_heads/2-4 and decompile_predicate_indicators/2-4,
    to the "logtalk" built-in object. Marked the decompile_predicate_head/4
    and decompile_predicate_indicator/4 as deprecated.

    Added support for preserving the scope information for operators declared
    using scope directives during compile time. Added information on entity
    declared operators to the XML documenting files. Updated the text, PDF,
    and (X)HTML conversion scripts to print out operator information.
