@@ -35,7 +35,7 @@
 		<br/>
 		<span>http://logtalk.org/</span>
 	</p>
-	<p class="date">Last updated on March 15, 2011</p>
+	<p class="date">Last updated on April 15, 2011</p>
 </div>
 
 <div class="toc">
